# SubHub

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  subhub_data.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/old_src/: main.py  test.db
backend/old_src/app/: database.py  main.py
backend/old_src/app/api/: analytics.py  auth.py  subscriptions.py  system.py
backend/old_src/app/core/: logging.py  security.py
backend/old_src/app/db/: __init__.py  storage.py
backend/old_src/app/models/: subscription.py  user.py
backend/old_src/app/routers/: auth.py  ping.py
backend/old_src/app/services/: auth.py  middleware.py
backend/old_src/tests/: conftest.py  test_security.py  test_subscriptions.py  test_system.py
backend/src/: README.md  main.py  subhub_data.json  test.db
backend/src/app/: __init__.py  config.py  db.py  main.py
backend/src/app/api/: __init__.py  analytics.py  auth.py  subscriptions.py  system.py
backend/src/app/core/: __init__.py  logging.py  security.py
backend/src/app/db/: __init__.py  storage.py
backend/src/app/models/: __init__.py  subscription.py  user.py
backend/src/backend/: .coverage  aio.py  main.py  test_main.py
backend/src/data/: subhub_data.json
backend/src/scripts/: generate_demo_data.py
backend/src/tests/: conftest.py  test_analytics.py  test_auth.py  test_security.py  test_subscriptions.py  test_system.py  test_validation.py
backend/tests/manual/: test_auth_flow.py  test_subscription_flow.py
docs/: docker_dev_environment.md
(+73 files in other folders)
